--- a/src/styles/components/_toggle.scss
+++ b/src/styles/components/_toggle.scss
@@ -31,6 +31,7 @@
         transition: transform 500ms cubic-bezier(.38,.79,.47,1);
         .mode-icon {
             font-size: .9rem;
+            transform: scale(0);
             animation: rise 200ms ease-in forwards;
         }
     }
