--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,19 +1,10 @@
 .header-logo {
     margin: auto;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    display: grid;
+    place-content: center;
     height: 20vh;
-    background-color: none;
-    .point {
-        margin: auto;
-        height: 5px;
-        width: 5px;
-        border-radius: 50%;
-        margin-top: 10px;
-    }
     .logo-container {
-        padding: 25px;
         .chat-icon {
             font-size: 2rem;
             transition: color 1s ease;
