--- a/src/styles/components/_message.scss
+++ b/src/styles/components/_message.scss
@@ -1,3 +1,11 @@
+.day-first-ms-date {
+    margin:10px auto;
+    font-size: .75rem;
+    width: fit-content;
+    border-radius: 15px;
+    font-weight: 500;
+    padding:5px 10px;
+}
 .msg-container {
     display: flex;
     clear: both;
@@ -10,13 +18,13 @@
             bottom: 0;
             height: 25px;
             width: 25px;
-            font-size: 14px;
+            font-size: 13px;
         }
     }
     .msg {
         border-radius: 8px;
         margin: 2px;
-        padding: 10px;
+        padding: 10px 10px 0px 10px;
         word-wrap: break-word;
         overflow-x: hidden;
         opacity: 0;
@@ -29,6 +37,12 @@
         .text {
             font-size: 13px;
             font-weight: 400;
+        }
+        .time {
+            margin-left: 15px;
+            float: right;
+            padding: 5px;
+            font-size: .75rem;
         }
     }
     .last-msg-sender {
