--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 @import './base/reset';
 @import './components/login';
 @import './components/logo';
-@import './components/user';
+@import './components/room';
 @import './components/message';
 @import './components/loading';
 @import './components/toggle';
