--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 * {
     margin: 0;
@@ -18,7 +19,7 @@ button, input {
     display: flex;
     flex-direction: column;
     align-items: center;
-    &, .login .info, .login input, .room form, .logo-container, .msg-container .msg, .day-first-ms-date {
+    &, .login .info, .login input, .room form, .logo-container, .msg-container .msg, .day-first-ms-date, .flesh {
         transition: all 200ms ease-in-out;
-    }
+    }   
 }
