--- a/src/styles/components/_login.scss
+++ b/src/styles/components/_login.scss
@@ -1,5 +1,5 @@
 .login {
-    height: 50vh;
+    height: 55vh;
     .info, .github {
         text-align: center;
     }
@@ -8,7 +8,6 @@
         margin: auto;
         width: 80%;
         P {
-            font-weight: 300;
             margin-bottom: 5px;
         }
     }
@@ -24,36 +23,12 @@
         }
 
     }
-    .palette {
-        display: flex;
-        margin-top: 25px;
-        justify-content: center;
-        gap: 5px;
-        opacity: .3;
-        animation: converge 1s ease-in-out forwards;
-        div {
-            display: grid;
-            place-content: center;
-            height: 18px;
-            width: 18px;
-            border-radius: 50%;
-            border: 1px solid transparent;
-            cursor: pointer;
-            transition-duration: 50ms;
-            .check-icon {
-                font-size: .8rem;
-            }
-            &:hover {
-                transform: scale(.98);
 
-            }
-        }
-       
-    }
     form {
         display: flex;
-        flex-direction: column;
         align-items: center;
+        flex-direction: column;
+        gap: 20px;
         margin-top: 20px;
         input, button {
           height: 40px;
@@ -62,20 +37,21 @@
         input {
             width:  230px;
             padding: 15px;
-            margin-bottom: 8px;
             color: inherit;
             border-radius: 5px;
             border: 1px solid transparent;
             &::placeholder {
                 font-size: .8rem;
-                color: #8f8f8f;
+                font-weight: 400;
+                color: #a2a2a2;
             }
             &:focus {
-                box-shadow: 0px 0px 0px .5px rgba(124, 124, 124, 0.597);
+                box-shadow: 0px 0px 0px .5px rgba(138, 138, 138, 0.597);
             }
             
         }
         button {
+            margin-top: 20px;
             transition: opacity 200ms cubic-bezier(.97,.75,.87,.78);
             cursor: pointer;
             display: grid;
@@ -84,6 +60,33 @@
             border-radius: 50%;
             place-content: center;
         }
+        .palette {
+            display: flex;
+            justify-content: center;
+            gap: 5px;
+            opacity: .3;
+            animation: converge 1s ease-in-out forwards;
+            div {
+                display: grid;
+                place-content: center;
+                height: 18px;
+                width: 18px;
+                border-radius: 50%;
+                border: 1px solid transparent;
+                cursor: pointer;
+                transition-duration: 50ms;
+                .check-icon {
+                    font-size: .8rem;
+                    color: white;
+                }
+                &:hover {
+                    transform: scale(.98);
+    
+                }
+            }
+           
+        }
+
     }
 }
 @keyframes converge {
