--- a/src/styles/components/_logo.scss
+++ b/src/styles/components/_logo.scss
@@ -1,20 +1,19 @@
 .header-logo {
+    position: relative;
     margin: auto;
     width: 100%;
     display: grid;
     place-content: center;
     height: 20vh;
+    font-family: 'Nunito', sans-serif;
     .logo-container {
         .chat-icon {
             font-size: 2rem;
             transition: color 1s ease;
                }
         h1 {
-            margin-top: -10px;
-            font-size: 1.65rem;
-        }
-        p {
-            font-size: .7rem;
+            margin-top: -15px;
+            font-size: 1.7rem;
         }
     }
 }
