--- a/src/styles/components/_room.scss
+++ b/src/styles/components/_room.scss
@@ -5,7 +5,7 @@
     justify-content: space-between;
     padding: 5px;
     padding-top: 0px;
-    height: 50vh;
+    height: 55vh;
     overflow-y: hidden;
     animation: room 1s cubic-bezier(0,.99,.47,1) forwards;
     .arrow-down {
@@ -43,6 +43,7 @@
           }
         &::-webkit-scrollbar-thumb {
             background-color: rgba(123, 123, 123, 0.446);
+            border-radius: 5px;
             transition-duration: 250ms;
             &:hover {
                 background-color: rgba(124, 124, 124, 0.582);
