--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -22,12 +23,12 @@ button, input {
   align-items: center;
 }
 
-.App, .App .login .info, .App .login input, .App .room form, .App .logo-container, .App .msg-container .msg, .App .day-first-ms-date {
+.App, .App .login .info, .App .login input, .App .room form, .App .logo-container, .App .msg-container .msg, .App .day-first-ms-date, .App .flesh {
   transition: all 200ms ease-in-out;
 }
 
 .login {
-  height: 50vh;
+  height: 55vh;
 }
 
 .login .info, .login .github {
@@ -41,7 +42,6 @@ button, input {
 }
 
 .login .info P {
-  font-weight: 300;
   margin-bottom: 5px;
 }
 
@@ -59,38 +59,11 @@ button, input {
   text-decoration: underline;
 }
 
-.login .palette {
-  display: flex;
-  margin-top: 25px;
-  justify-content: center;
-  gap: 5px;
-  opacity: .3;
-  animation: converge 1s ease-in-out forwards;
-}
-
-.login .palette div {
-  display: grid;
-  place-content: center;
-  height: 18px;
-  width: 18px;
-  border-radius: 50%;
-  border: 1px solid transparent;
-  cursor: pointer;
-  transition-duration: 50ms;
-}
-
-.login .palette div .check-icon {
-  font-size: .8rem;
-}
-
-.login .palette div:hover {
-  transform: scale(0.98);
-}
-
 .login form {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
+  gap: 20px;
   margin-top: 20px;
 }
 
@@ -102,7 +75,6 @@ button, input {
 .login form input {
   width: 230px;
   padding: 15px;
-  margin-bottom: 8px;
   color: inherit;
   border-radius: 5px;
   border: 1px solid transparent;
@@ -110,14 +82,16 @@ button, input {
 
 .login form input::placeholder {
   font-size: .8rem;
-  color: #8f8f8f;
+  font-weight: 400;
+  color: #a2a2a2;
 }
 
 .login form input:focus {
-  box-shadow: 0px 0px 0px 0.5px rgba(124, 124, 124, 0.597);
+  box-shadow: 0px 0px 0px 0.5px rgba(138, 138, 138, 0.597);
 }
 
 .login form button {
+  margin-top: 20px;
   transition: opacity 200ms cubic-bezier(0.97, 0.75, 0.87, 0.78);
   cursor: pointer;
   display: grid;
@@ -125,6 +99,34 @@ button, input {
   width: 40px;
   border-radius: 50%;
   place-content: center;
+}
+
+.login form .palette {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  opacity: .3;
+  animation: converge 1s ease-in-out forwards;
+}
+
+.login form .palette div {
+  display: grid;
+  place-content: center;
+  height: 18px;
+  width: 18px;
+  border-radius: 50%;
+  border: 1px solid transparent;
+  cursor: pointer;
+  transition-duration: 50ms;
+}
+
+.login form .palette div .check-icon {
+  font-size: .8rem;
+  color: white;
+}
+
+.login form .palette div:hover {
+  transform: scale(0.98);
 }
 
 @keyframes converge {
@@ -140,11 +142,13 @@ button, input {
 }
 
 .header-logo {
+  position: relative;
   margin: auto;
   width: 100%;
   display: grid;
   place-content: center;
   height: 20vh;
+  font-family: 'Nunito', sans-serif;
 }
 
 .header-logo .logo-container .chat-icon {
@@ -153,12 +157,8 @@ button, input {
 }
 
 .header-logo .logo-container h1 {
-  margin-top: -10px;
-  font-size: 1.65rem;
-}
-
-.header-logo .logo-container p {
-  font-size: .7rem;
+  margin-top: -15px;
+  font-size: 1.7rem;
 }
 
 .room {
@@ -168,7 +168,7 @@ button, input {
   justify-content: space-between;
   padding: 5px;
   padding-top: 0px;
-  height: 50vh;
+  height: 55vh;
   overflow-y: hidden;
   animation: room 1s cubic-bezier(0, 0.99, 0.47, 1) forwards;
 }
@@ -216,6 +216,7 @@ button, input {
 
 .room .messages-block::-webkit-scrollbar-thumb {
   background-color: rgba(123, 123, 123, 0.446);
+  border-radius: 5px;
   transition-duration: 250ms;
 }
 
@@ -304,11 +305,10 @@ button, input {
 }
 
 .msg-container .msg {
-  border-radius: 8px;
+  border-radius: 10px;
   margin: 2px;
-  padding: 10px 10px 0px 10px;
+  padding: 12px 12px 0px 12px;
   word-wrap: break-word;
-  overflow-x: hidden;
   opacity: 0;
   transform: scale(0);
   animation: f 200ms ease-in-out forwards;
@@ -316,12 +316,12 @@ button, input {
 
 .msg-container .msg .name {
   margin-bottom: 5px;
+  font-size: 14px;
   font-weight: 500;
 }
 
 .msg-container .msg .text {
   font-size: 13px;
-  font-weight: 400;
 }
 
 .msg-container .msg .time {
@@ -335,8 +335,25 @@ button, input {
   border-bottom-right-radius: 0px;
 }
 
+.msg-container .last-msg-sender .flesh {
+  right: -18px;
+}
+
 .msg-container .last-msg-others {
   border-bottom-left-radius: 0px;
+}
+
+.msg-container .last-msg-others .flesh {
+  left: -18px;
+}
+
+.msg-container .flesh {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-top: 10px solid transparent;
+  position: absolute;
+  bottom: 0;
 }
 
 @keyframes f {
@@ -347,7 +364,7 @@ button, input {
 }
 
 .spiner {
-  height: 50vh;
+  height: 55vh;
   display: flex;
   column-gap: 2px;
 }
@@ -417,7 +434,7 @@ button, input {
 }
 
 .toggle > div .mode-icon {
-  font-size: .9rem;
+  font-size: .7rem;
   transform: scale(0);
   animation: rise 200ms ease-in forwards;
 }
