--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 
-@import './base/reset';
+@import './base/base';
 @import './components/login';
 @import './components/logo';
 @import './components/room';
